渲染基础设施优化：手写顶点快路径、BatchableSubmit 批量提交、深度测试管线
- RenderUtil：standalone 模型静态渲染（缓存 + 11 参 addVertex 快路径 + entity-atlas 管线）
- LyraItemRenderTypes：items atlas + entity 管线（无 ITEM_ENTITY_TARGET 离屏目标）
- LyraCustomSubmit/LyraRenderPhases/LyraCustomFeatureRenderer：afterTerrain 提交链 + BatchableSubmit 跨实体 draw 合并
- ColorVertexConsumer：合并 AlphaBufferSource/TintedVertexConsumer（颜色/透明度拦截）
- TrailRenderType 去 sortOnUpload；TrailConfig 走 afterTerrain phase
- 删除 Java 模型路径（LyraModelLayers/renderJavaModel）
- 文档：26.2 渲染管线性能调查（第 7 章）